--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Harshaneel/NL2KR/NL2KR-System/NL2KR.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
