--- a/logging.properties
+++ b/logging.properties
@@ -27,7 +27,7 @@ handlers= java.util.logging.ConsoleHandler,java.util.logging.FileHandler
 # Note that the ConsoleHandler also has a separate level
 # setting to limit messages printed to the console.
 # Loglevel INFO
-.level=INFO
+.level=OFF
 
 ############################################################
 # Handler specific properties.
