--- a/logging.properties
+++ b/logging.properties
@@ -27,7 +27,7 @@ handlers= java.util.logging.ConsoleHandler,java.util.logging.FileHandler
 # Note that the ConsoleHandler also has a separate level
 # setting to limit messages printed to the console.
 # Loglevel INFO
-.level=OFF
+.level=ERROR
 
 ############################################################
 # Handler specific properties.
@@ -41,7 +41,7 @@ java.util.logging.FileHandler.count = 1
 java.util.logging.FileHandler.formatter = java.util.logging.XMLFormatter
 
 # Limit the message that are printed on the console to INFO and above.
-java.util.logging.ConsoleHandler.level = INFO
+java.util.logging.ConsoleHandler.level = ERROR
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 #java.util.logging.SimpleFormatter.format =%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS %4$s %2$s %5$s%6$s%n
 
